--- a/JobWorker.csproj
+++ b/JobWorker.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="IronPdf" Version="2025.9.4" />
     <PackageReference Include="itext" Version="9.3.0" />
     <PackageReference Include="itext.licensing.base" Version="4.2.3" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="QRCoder" Version="1.7.0" />
